volexc/tests/ui/parse_service_missing_arrow.vol
// Missing arrow in service method

message Request {}
message Response {}

service Foo {
    fn bar(Request) Response = 1;
}
